deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-edge-router
  namespace: kafka-router
  labels:
    app.kubernetes.io/name: kafka-edge-router
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kafka-edge-router
  ports:
    - name: https
      port: 443
      targetPort: tls-http
      appProtocol: https
    - name: grpcs
      port: 9443
      targetPort: tls-grpc
      appProtocol: https
